--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --ignore './node_modules/' --exec babel-node ./src/server.js",
     "migrate": "npx sequelize-cli db:migrate",
-    "undo-migrate": "npx sequelize-cli db:migrate:undo:all"
+    "migrate-undo-all": "npx sequelize-cli db:migrate:undo:all",
+    "migrate-undo": "npx sequelize-cli db:migrate:undo"
   },
   "keywords": [],
   "author": "",
