--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./src/test.js",
     "start": "nodemon --ignore './node_modules/' --exec babel-node ./src/server.js",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate-undo-all": "npx sequelize-cli db:migrate:undo:all",
-    "migrate-undo": "npx sequelize-cli db:migrate:undo"
+    "migrate-undo": "npx sequelize-cli db:migrate:undo",
+    "seed-all": "npx sequelize-cli db:seed:all",
+    "seed-undo-all": "npx sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +19,11 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "path": "^0.12.7",
     "sequelize": "^6.2.4",
     "sequelize-paginate": "^1.1.6",
     "uuid": "^8.3.0"
